# notebooklm-api

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  test_api.py  test_api2.py  test_cookie_filter.py  test_list.py  test_validation.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
app/: __init__.py  cli.py  main.py
app/api/: __init__.py  deps.py  error_handlers.py
app/core/: config.py  (+1 more)
docs/: api.md  auth.md  cli.md  docker.md  index.md  jobs.md  notebooks.md  smoke-test.md  troubleshooting.md  ui.md  upgrade-0.2.md
tests/: conftest.py  test_accounts.py  test_api.py  test_auth_sync.py  test_cli.py  test_community_files.py  test_cookie_filter.py  test_docs.py  test_download_robustness.py  test_invariants.py  test_onda1_adapter_migration.py  test_onda2_storage_isolation.py  test_onda3_polling_scoping.py  test_onda4_error_handling.py  test_onda5_auth_cors.py  test_onda6_account_contract.py  test_waiting_remote.py
use-http-curl/: 01-health.md  02-auth-status.md  03-auth-storage-state.md  04-auth-login-start.md  05-auth-login-complete.md  10-notebooks.md  20-sources.md  30-jobs.md  40-operations-audio.md  41-operations-video.md  50-artifacts.md  90-fluxos-completos.md  README.md
use-python/: 01-health.py  02-auth.py  03-notebooks.py  04-sources.py  05-jobs.py  06-operations-audio.py  07-operations-video.py  08-artifacts.py  90-end-to-end.py  README.md
(+41 files in other folders)
